--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,57 @@
+
+/** website grid **/
+
 body {
-    color: red;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    margin: 0;
+    min-height: 100vh;
+    padding: 0;
+    text-align: center;
+}
+
+header {
+    grid-row: 1;
+}
+
+main {
+    grid-row: 2;
+}
+
+footer {
+    grid-row: 3;
+}
+
+/** main grid **/
+
+#game {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: repeat(5, auto);
+    text-align: center;
+}
+
+#explanation {
+    grid-column: 1;
+    grid-row: 1;
+}
+
+#englishword {
+    grid-column: 1;
+    grid-row: 2;
+}
+
+#germanwords {
+    grid-column: 1;
+    grid-row: 3;
+}
+
+#attempts {
+    grid-column: 1;
+    grid-row: 4;
+}
+
+#restart {
+    grid-column: 1;
+    grid-row: 5;
 }
