--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,3 +55,71 @@ footer {
     grid-column: 1;
     grid-row: 5;
 }
+
+/** german words grid **/
+
+#germanwords {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: repeat(5, 20%);
+}
+
+#box1 {
+    grid-column: 1;
+    grid-row: 1;
+}
+
+#box2 {
+    grid-column: 2;
+    grid-row: 1;
+}
+
+#box3 {
+    grid-column: 1;
+    grid-row: 2;
+}
+
+#box4 {
+    grid-column: 2;
+    grid-row: 2;
+}
+
+#box5 {
+    grid-column: 1;
+    grid-row: 3;
+}
+
+#box6 {
+    grid-column: 2;
+    grid-row: 3;
+}
+
+#box7 {
+    grid-column: 1;
+    grid-row: 4;
+}
+
+#box8 {
+    grid-column: 2;
+    grid-row: 4;
+}
+
+#box9 {
+    grid-column: 1 / 3;
+    grid-row: 5;
+    margin: 5px 25%;
+    padding: 20px;
+}
+
+/** box style **/
+#box1,
+#box2,
+#box3,
+#box4,
+#box5,
+#box6,
+#box7,
+#box8 {
+    margin: 5px;
+    padding: 20px;
+}
