--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,3 +123,75 @@ footer {
     margin: 5px;
     padding: 20px;
 }
+
+/** for screen sizes min-width 600px **/
+
+@media screen and (min-width: 600px) {
+
+    #germanwords {
+        display: grid;
+        grid-template-columns: 1fr 200px 200px 200px 1fr;
+        grid-template-rows: repeat(3, 33%);
+    }
+    
+    #box1 {
+        grid-column: 2;
+        grid-row: 1;
+    }
+    
+    #box2 {
+        grid-column: 3;
+        grid-row: 1;
+    }
+    
+    #box3 {
+        grid-column: 4;
+        grid-row: 1;
+    }
+    
+    #box4 {
+        grid-column: 2;
+        grid-row: 2;
+    }
+    
+    #box5 {
+        grid-column: 3;
+        grid-row: 2;
+    }
+    
+    #box6 {
+        grid-column: 4;
+        grid-row: 2;
+    }
+    
+    #box7 {
+        grid-column: 2;
+        grid-row: 3;
+    }
+    
+    #box8 {
+        grid-column: 3;
+        grid-row: 3;
+    }
+    
+    #box9 {
+        grid-column: 4;
+        grid-row: 3;
+    }
+    
+    /** box style **/
+    #box1,
+    #box2,
+    #box3,
+    #box4,
+    #box5,
+    #box6,
+    #box7,
+    #box8,
+    #box9 {
+        margin: 5px;
+        padding: 20px;
+    }
+
+
+}
