--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,6 +71,18 @@ footer a {
     grid-row: 5;
 }
 
+#numberofattempts,
+#restartgame {
+    margin: 5px;
+    padding: 5px;
+} 
+
+#englishword div {
+    border: #201773 solid 5px;
+    margin: 5px 10%;
+    padding: 5px;
+}
+
 /** german words grid **/
 
 #germanwords {
@@ -237,5 +249,10 @@ footer a {
         padding: 20px;
     }
 
+    #englishword div {
+        border: #201773 solid 5px;
+        margin: 5px 30%;
+        padding: 5px;
+    }
 
 }
