--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,12 @@ footer a {
     grid-row: 2;
 }
 
+#englishword div {
+    border: #201773 solid 5px;
+    margin: 5px 10%;
+    padding: 5px;
+}
+
 #germanwords {
     grid-column: 1;
     grid-row: 3;
@@ -77,11 +83,6 @@ footer a {
     padding: 5px;
 } 
 
-#englishword div {
-    border: #201773 solid 5px;
-    margin: 5px 10%;
-    padding: 5px;
-}
 
 /** german words grid **/
 
@@ -184,6 +185,7 @@ footer a {
 
 @media screen and (min-width: 600px) {
 
+    /** german words grid **/
     #germanwords {
         display: grid;
         grid-template-columns: 1fr 200px 200px 200px 1fr;
@@ -249,6 +251,7 @@ footer a {
         padding: 20px;
     }
 
+    /** english word box **/
     #englishword div {
         border: #201773 solid 5px;
         margin: 5px 30%;
