Refactor css and create incorrect/correct classes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,27 +140,12 @@ footer a {
 }
 
 /** box style **/
-#box1,
-#box2,
-#box3,
-#box4,
-#box5,
-#box6,
-#box7,
-#box8 {
+.box:not(#box9) {
     margin: 5px;
     padding: 20px;
 }
 
-#box1,
-#box2,
-#box3,
-#box4,
-#box5,
-#box6,
-#box7,
-#box8,
-#box9,
+.box,
 #restartgame {
     background-color: #201773;
     color: #fff;
@@ -168,18 +153,21 @@ footer a {
     transition: all 0.2s ease-in-out;
 }
 
-#box1:hover,
-#box2:hover,
-#box3:hover,
-#box4:hover,
-#box5:hover,
-#box6:hover,
-#box7:hover,
-#box8:hover,
-#box9:hover,
+.box:hover,
 #restartgame:hover {
     background-color: #000047;
 }
+
+.incorrect {
+    background-color: red;
+}
+
+.correct {
+    background-color: green;
+}
+
+
+
 
 /** for screen sizes min-width 600px **/
 
@@ -259,3 +247,4 @@ footer a {
     }
 
 }
+
