--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,8 +166,48 @@ footer a {
     background-color: green;
 }
 
+/** Modal style 
+code taken from: w3schools.com/howto/howto_css_modals.asp 
+**/
+/* Modal background */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
 
+/* Modal content */
+.modal-content {
+    background-color: #fff;
+    color: #201773;
+    font-size: 1.2rem;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #000047;
+    width: 80%;
+}
 
+/* Modal close button */
+#close {
+    background-color: #201773;
+    color: #fff;
+    font-size: .8;
+    font-weight: bold;
+}
+
+#close:hover,
+#close:focus {
+    background-color: #000047;
+    text-decoration: none;
+    cursor: pointer;
+}
 
 /** for screen sizes min-width 600px **/
 
