--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,8 +92,8 @@ footer a {
 
 #choosequiz {
     display: grid;
-    grid-template-columns: 33% 33% 33%;
-    grid-template-rows: 50% 50%;
+    grid-template-columns: repeat(3, 33%);
+    grid-template-rows: repeat(2, 50%);
 }
 
 #choosequiztext {
@@ -120,7 +120,7 @@ footer a {
 
 #germanwords {
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: repeat(2, 50%);
     grid-template-rows: repeat(5, 20%);
 }
 
@@ -248,7 +248,7 @@ code taken from: w3schools.com/howto/howto_css_modals.asp
     /* german words grid */
     #germanwords {
         display: grid;
-        grid-template-columns: 1fr 200px 200px 200px 1fr;
+        grid-template-columns: 1fr repeat(3, 200px) 1fr;
         grid-template-rows: repeat(3, 33%);
     }
     
@@ -297,21 +297,14 @@ code taken from: w3schools.com/howto/howto_css_modals.asp
         grid-row: 3;
     }
     
-    /** box style **/
-    #box1,
-    #box2,
-    #box3,
-    #box4,
-    #box5,
-    #box6,
-    #box7,
-    #box8,
+    /* box style */
+    .box,
     #box9 {
         margin: 5px;
         padding: 20px;
     }
 
-    /** english word box **/
+    /* english word box */
     #word {
         border: #201773 solid 5px;
         margin: 5px 30%;
