--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,6 +198,10 @@ footer a {
     background-color: green;
 }
 
+.disable {
+    pointer-events: none;
+}
+
 /* Modal style 
 code taken from: w3schools.com/howto/howto_css_modals.asp 
 */
