--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -249,7 +249,7 @@ code taken from: w3schools.com/howto/howto_css_modals.asp
 #close {
     background-color: #201773;
     color: #fff;
-    font-size: .8;
+    font-size: .8rem;
     font-weight: bold;
 }
 
